fix misaligned status text

--- a/src/assets/scss/datatablecomponent/index.scss
+++ b/src/assets/scss/datatablecomponent/index.scss
@@ -69,7 +69,6 @@
 
 .status-tag {
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
